--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,116 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="이전"
-            android:hint="pre"/>
-
-        <TextView
-            android:id="@+id/today"
-            android:layout_width="233dp"
-            android:layout_height="wrap_content"
-            android:hint="오늘날짜"
-            android:padding="8dp"
-            android:textAlignment="center"
-            android:textSize="40px"
-
-            />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="다음" />
-
-    </LinearLayout>
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginVertical="1dp">
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp">
+        <Button
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="이전"
+            android:layout_marginRight="23dp"
+            android:layout_marginLeft="33dp"
+            android:onClick="PreviousMonth"/>
+        <TextView
+            android:id="@+id/MonthYearTextView"
+            android:layout_width="200px"
+            android:layout_height="wrap_content"
+            android:text="2022년 4월"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textAlignment="center"/>
+        <Button
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="다음"
+            android:layout_marginRight="33dp"
+            android:layout_marginLeft="23dp"
+            android:onClick="NextMonth"/>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#8BC34A"
+        android:orientation="horizontal">
         <TextView
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginHorizontal="1dp"
-            android:textAlignment="center"
-            android:hint="일"/>
-
+            android:text="일"
+            android:textAlignment="center" />
         <TextView
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginHorizontal="1dp"
-            android:textAlignment="center"
-            android:hint="월"/>
-
+            android:text="월"
+            android:textAlignment="center" />
         <TextView
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginHorizontal="1dp"
-            android:textAlignment="center"
-            android:hint="화"/>
-
+            android:text="화"
+            android:textAlignment="center" />
         <TextView
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginHorizontal="1dp"
-            android:textAlignment="center"
-            android:hint="수"/>
-
+            android:text="수"
+            android:textAlignment="center" />
         <TextView
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginHorizontal="1dp"
-            android:textAlignment="center"
-            android:hint="목"/>
-
+            android:text="목"
+            android:textAlignment="center" />
         <TextView
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginHorizontal="1dp"
-            android:textAlignment="center"
-            android:hint="금"/>
-
+            android:text="금"
+            android:textAlignment="center" />
         <TextView
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginHorizontal="1dp"
-            android:textAlignment="center"
-            android:hint="토"/>
-
+            android:text="토"
+            android:textAlignment="center" />
     </LinearLayout>
 
     <GridView
-        android:id="@+id/GridView"
+        android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="15"
-        android:numColumns="7"
-        android:horizontalSpacing="1dp"
-        android:layout_marginLeft="1dp"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="1dp"></GridView>
-
+        android:layout_weight="1"
+        android:numColumns="7" />
 
 </LinearLayout>
